--- a/kapp/src/main/res/layout/activity_normal.xml
+++ b/kapp/src/main/res/layout/activity_normal.xml
@@ -7,8 +7,10 @@
     tools:context=".target.NormalActivity">
 
     <TextView
+        android:id="@+id/tvClick"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="tvClicks"
         android:gravity="center"
         android:text="Hello World!"
         android:textSize="30dp"
